--- a/1203210096_Yudhistira Ar Rahmanu S/index.html
+++ b/1203210096_Yudhistira Ar Rahmanu S/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <p>Hello Dunia!, Saya sudah belajar Git</p>
-    <p>Saya sedang belajar git Repository</p>
+    <p>Hello Dunia!, Saya belajar Git</p>
+    <p>Saya belajar git Repository</p>
 </body>
 
 </html>
